package Ejercicio1entrega2;

// Target Interface
public interface BookingSystem {
    void bookTable();
}

