package Ejercicio1entrega2;

// Adaptee
public class ExternalBookingSystem {
    public void makeReservation() {
        System.out.println("Reservation made in external system.");
    }
}
