package Ejercicio1entrega2;

// Observer
public interface Observer {
    void update(String message);
}

