package Ejercicio1entrega2;

import java.util.ArrayList;
import java.util.List;

// Componente
public interface RestaurantComponent {
    void serveCustomers();
}

